[package]
name = "toy-farm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0"
bracket-noise = "0.8.7"
rand = { version = "0.8.5", features = ["std", "std_rng"] }
rand_chacha = { version = "0.3.1", features = ["std"] }
bevy-inspector-egui = "0.21.0"
